--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "svelte-check": "^4.1.4",
     "typescript": "~5.7.2",
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "canvas-confetti": "^1.9.3"
   }
 }
